add token model

--- a/deployment/secrets.yaml
+++ b/deployment/secrets.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: my-postgres-db-password
 type: Opaque
-data:
-  DB_PASSWORD: "m7jbEBFBss"
+stringData:
+  DB_PASSWORD: "auDoKrnGmp"
