--- a/deployment/coworking.yaml
+++ b/deployment/coworking.yaml
@@ -43,14 +43,10 @@ spec:
             path: "/readiness_check"
             port: 5153
           initialDelaySeconds: 5
-          timeoutSeconds: 5
+          timeoutSeconds: 2
         envFrom:
+        - secretRef:
+            name: my-postgres-db-password
         - configMapRef:
             name: my-postgres-db-configmap
-        env:
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: my-postgres-db-password
-              key: m7jbEBFBss
       restartPolicy: Always
