--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -1,11 +1,12 @@
-FROM python:3.10
+FROM public.ecr.aws/docker/library/python:3.10-alpine
 
 WORKDIR /app
 
 COPY . /app
 
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
 EXPOSE 80
 
 CMD ["python", "app.py"]
+CMD python app.py
