--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -1,12 +1,11 @@
-FROM public.ecr.aws/docker/library/python:3.10-alpine
+FROM python:3.10
 
 WORKDIR /app
 
 COPY . /app
 
-RUN pip install --no-cache-dir -r /app/requirements.txt
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 EXPOSE 80
 
 CMD ["python", "app.py"]
-CMD python app.py
